src/objects/Invoice__c.object
<CustomObject>
    <description>Created by Oscar @ Impact Box 15/07/2020.</description>
    <fields>
        <fullName>AccountFunder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar @ Impact Box, 16/07/2020</description>
        <label>Funder</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Funder Invoices</relationshipLabel>
        <relationshipName>Invoices1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActualInvoiceDate__c</fullName>
        <description>Created by Oscar @ Impact Box 15/07/2020</description>
        <label>Actual Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CancelledInvoiceTotal__c</fullName>
        <description>Cancelled Invoice Total before it was deleted.</description>
        <label>Cancelled Invoice Total</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Cohort__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar @ Impact Box</description>
        <label>Cohort</label>
        <referenceTo>Cohort__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DaysOverdue__c</fullName>
        <description>Created by Oscar @ Impact Box, 30/07/2020</description>
        <formula>IF( AND(ScheduledDate__c &gt; TODAY(),ISBLANK( InvoicePaidDate__c )),NULL,

IF(ISBLANK( InvoicePaidDate__c ),

TODAY()- ScheduledDate__c ,

InvoicePaidDate__c - ScheduledDate__c)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This will count the days an invoice has gone unpaid after scheduled date. Once paid it will will show the number of days between the scheduled date and the paid date.</inlineHelpText>
        <label>Days Overdue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FinanceContactEmail__c</fullName>
        <formula>AccountFunder__r.FinanceContactEmail__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinanceContactName__c</fullName>
        <formula>AccountFunder__r.FinanceContactName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Finance Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InoiceNum__c</fullName>
        <description>Created by Oscar @ Impact Box, 22/07/2020</description>
        <displayFormat>INV-{000000}</displayFormat>
        <inlineHelpText>The unique Invoice Number, this number is shared between Tutor Invoices and School Invoices</inlineHelpText>
        <label>Inoice Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>InvoiceDate__c</fullName>
        <description>Created by Oscar @ Impact Box, 29/07/2020</description>
        <label>Invoice Period Ending</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceMonthNum__c</fullName>
        <description>Created by Oscar @ Impact Box</description>
        <formula>IF( RecordType.DeveloperName = &apos;SchoolCharge&apos;,

MONTH( InvoiceDate__c ),

MONTH( ScheduledDate__c )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Month Num</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>InvoiceNum__c</fullName>
        <description>Created by Oscar @ Impact Box, 22/07/2020</description>
        <displayFormat>INV-{000000}</displayFormat>
        <inlineHelpText>The unique Invoice Number, this number is shared between Tutor Invoices and School Invoices</inlineHelpText>
        <label>Invoice Num</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>InvoicePaidDate__c</fullName>
        <description>Created by Oscar @ Impact Box, 22/07/2020</description>
        <inlineHelpText>Update this once you have confirmed the payment has been received.</inlineHelpText>
        <label>Invoice Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoicePeriodStarting__c</fullName>
        <description>Created by Oscar @ Impact Box, 10/08/2020</description>
        <label>Invoice Period Starting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceSent__c</fullName>
        <description>Created by Oscar @ Impact Box, 22/07/2020</description>
        <inlineHelpText>The date the invoice was last sent, if a correction is made and another invoice is sent this will be overwritten.</inlineHelpText>
        <label>Invoice Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>InvoiceTotal__c</fullName>
        <description>Created by Oscar @ Impact Box, 22/07/2020. Populated by DLRS</description>
        <label>Invoice Total</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>InvoiceYear__c</fullName>
        <description>Created by Oscar @ Impact Box, 29/07/2020</description>
        <formula>YEAR(InvoiceDate__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NewInvoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar Mawby @ Impact Box, 12/08/2020. Populated by flow on cancellation.</description>
        <label>New Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>Old Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Created by Oscar @ Impact Box, 29/07/2020</description>
        <inlineHelpText>This will appear on the Invoice PDF</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar @ Impact Box, 15/07/2020</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ScheduledDate__c</fullName>
        <description>Created by Oscar @ Impact Box, 15/07/2020</description>
        <inlineHelpText>The date the invoice payment is scheduled to be received by</inlineHelpText>
        <label>Scheduled Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ScheduledSendDate__c</fullName>
        <description>Created by Oscar @ Impact Box, 22/07/2020</description>
        <inlineHelpText>The Date the invoice is scheduled to send</inlineHelpText>
        <label>Scheduled Send Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SchoolInvoiceYear__c</fullName>
        <description>Created by Oscar @ Impact Box, 03/08/2020</description>
        <formula>TEXT(YEAR( InvoiceDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SchoolInvoiceYear</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar @ Impact Box, 15/07/2020</description>
        <label>School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>School Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Created by Oscar @ Impact Box, 30/07/2020</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                    <label>Cancelled, Create Replacement</label>
                </value>
                <value>
                    <fullName>Cancelled, No Replacement</fullName>
                </value>
                <value>
                    <fullName>Payment Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TutorEngagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar @ Impact Box 15/07/2020</description>
        <label>Tutor Engagement</label>
        <referenceTo>Engagement__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TutorInvoiceYear__c</fullName>
        <formula>TEXT(YEAR(ScheduledDate__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TutorInvoiceYear</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tutor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created by Oscar @ Impact Box 15/07/2020</description>
        <label>Tutor</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>textInvoiceYear__c</fullName>
        <description>Created by Oscar @ Impact Box, 03/08/2020</description>
        <formula>TEXT(YEAR(  ScheduledDate__c  ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>textTutorInvoiceYear</label>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>InvoiceTotal__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FOR_UPDATE_School_Invoices_This_Month</fullName>
        <columns>InvoiceNum__c</columns>
        <columns>NAME</columns>
        <columns>InvoiceTotal__c</columns>
        <columns>Status__c</columns>
        <columns>InvoicePaidDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.SchoolCharge</value>
        </filters>
        <filters>
            <field>ScheduledDate__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid</value>
        </filters>
        <label>Outstanding School Invoices</label>
    </listViews>
    <listViews>
        <fullName>Tutor_Payments_This_Month</fullName>
        <columns>InvoiceNum__c</columns>
        <columns>NAME</columns>
        <columns>InvoiceTotal__c</columns>
        <columns>Status__c</columns>
        <columns>InvoicePaidDate__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Invoice__c.TutorPay</value>
        </filters>
        <filters>
            <field>ScheduledDate__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Paid</value>
        </filters>
        <label>FOR UPDATE: Tutor Payments This Month</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <recordTypes>
        <fullName>SchoolCharge</fullName>
        <active>true</active>
        <description>For School Charge Summaries within a month</description>
        <label>School Charge</label>
    </recordTypes>
    <recordTypes>
        <fullName>TutorPay</fullName>
        <active>true</active>
        <description>For Tutor Payment Summaries per month</description>
        <label>Tutor Pay</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>InvoicePaidDate</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISPICKVAL(Status__c ,&apos;Paid&apos;),ISBLANK(InvoicePaidDate__c ))</errorConditionFormula>
        <errorMessage>Invoice Paid Date and Status must be updated</errorMessage>
    </validationRules>
</CustomObject>